--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <script type="text/javascript">
+      delete localStorage._boomr_akamaiXhrRetry;
+    </script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
