Adding some styling and containers

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" type="text/css" href="hpstyle.css">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -67,6 +68,25 @@
     <script type="text/javascript">
       delete localStorage._boomr_akamaiXhrRetry;
     </script>
+
+    <div class="container">
+      <div class="row">
+        <div style="text-align:center">
+          <h2>Avinash Shenoy</h2>
+          <p>Test Page for bootstrap library usage</p>
+        </div>
+        <div class="row">
+          <div class="column">
+            <img src="/images/cat1.jpg" style="width:100%">
+          </div>
+          <div class="column">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra accumsan in nisl nisi. Urna et pharetra pharetra massa massa ultricies mi. Non tellus orci ac auctor. Et netus et malesuada fames ac turpis egestas maecenas pharetra. Sapien eget mi proin sed. Quis hendrerit dolor magna eget est lorem ipsum dolor. Ut morbi tincidunt augue interdum. Aliquam ultrices sagittis orci a scelerisque. At imperdiet dui accumsan sit amet nulla facilisi. Non blandit massa enim nec dui nunc. Blandit cursus risus at ultrices mi tempus. Quam pellentesque nec nam aliquam sem et tortor consequat id.</p>
+          </div>
+        </div>
+        
+      </div>
+      
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
