Added header with image

--- a/index.html
+++ b/index.html
@@ -59,18 +59,29 @@
     </script>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <!--
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
 
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
     <script type="text/javascript">
       delete localStorage._boomr_akamaiXhrRetry;
     </script>
 
     <div class="container">
       <div class="row">
+        <div class="row" style="text-align:center">
+          <div class="column" style="text-align:right">
+            <img src="/images/racket.jpg" style="width:100%">
+          </div>
+          <div class="column" style="text-align:left">
+            <div>
+              <h2>Test Page header</h2>
+              <p>Test Page Header descriptionfor bootstrap library usage</p>
+            </div>
+          </div>
+        </div>
         <div style="text-align:center">
           <h2>Avinash Shenoy</h2>
           <p>Test Page for bootstrap library usage</p>
