Update page header to mark prod

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
           <div class="column" style="text-align:left">
             <div>
-              <h2>Test Page header</h2>
+              <h2>Test Page header for mPulse Prod</h2>
               <p>Test Page Header descriptionfor bootstrap library usage</p>
             </div>
           </div>
