server local boomerang with force https false

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
           var js = this.createElement("script");
           if(dom) this.domain = dom;
           js.id = "boomr-if-as";
-          js.src = "https://s.go-mpulse.net/boomerang/" +
-          "U8JQF-25KGJ-WEKXK-YD63Q-U5EAE";
+          js.src = "debug_boomr.js";
+          //js.src = "https://s.go-mpulse.net/boomerang/" +
+          //"U8JQF-25KGJ-WEKXK-YD63Q-U5EAE";
           BOOMR_lstart=new Date().getTime();
           this.body.appendChild(js);
         };
