Change to non pci scratch boomerang endpoint

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           var js = this.createElement("script");
           if(dom) this.domain = dom;
           js.id = "boomr-if-as";
-          js.src = "https://s-lt2.go-mpulse.net/boomerang/" +
+          js.src = "https://c-lt2.go-mpulse.net/boomerang/" +
           "M84NN-X7YS3-27BZC-VNRD4-25BSW";
           BOOMR_lstart=new Date().getTime();
           this.body.appendChild(js);
